--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,2 @@
-*.ipynb linguist-detectable=True
-*.qml linguist-detectable=False
-*.html linguist-detectable=False
-*.c linguist-detectable=False
-*.cc linguist-detectable=False
-*.py linguist-language=python
-*.pyi linguist-language=python
-*.ipynb linguist-language=python
+* linguist-vendored
+*.ipynb linguist-vendored=false
